- refactored html and css  with nesting for readability. - changed hero image - background image. - fixed shoppingcart so it can scale with big orders. - Began to use variables in :root{}.

--- a/frontend_exam/style.css
+++ b/frontend_exam/style.css
@@ -1,3 +1,16 @@
+:root {
+  /*fonts*/
+  --headingFontSize: 36px;
+
+  --logoFontFamily: "Frank Ruhl Libre", serif;
+  --fontFamily: "Arimo", sans-serif;
+
+  /*colors*/
+  --white: #ffffff;
+  --black: #000000;
+  --beige: #f7f2de;
+}
+
 /* Reset and Base Styles */
 body,
 h1,
@@ -7,160 +20,160 @@ p,
 ul,
 li,
 button {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border: none;
-    background-color: transparent;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  background-color: transparent;
 }
 
 body {
-    font-family: 'Arimo', sans-serif;
-    color: #0B0A08;
-    margin: 0;
+  font-family: var(--fontFamily);
+  color: #0b0a08;
+  margin: 0;
 }
 
 /* Header Styles */
 header {
-    background-color: #F7F2DE;
-    display: flex;
-    align-items: center;
-    padding: 0.5rem;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10;
-    height: 68px;
-    
+  background-color: var(--beige);
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  height: 68px;
 }
 
 .header-actions {
-    display: flex;
-    align-items: center;
-    margin-right: 2rem; /* Add margin to the right of the wrapper */
-    width: 100%; 
-    justify-content: space-between; 
+  display: flex;
+  align-items: center;
+  margin-right: 2rem; /* Add margin to the right of the wrapper */
+  width: 100%;
+  justify-content: space-between;
 }
 
 .logo {
-    font-family: 'Frank Ruhl Libre', serif;
-    font-weight: 300;
-    font-size: 2.5rem;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+  font-family: var(--logoFontFamily);
+  font-weight: 300;
+  font-size: 2.5rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .hamburger-menu-btn {
-    font-size: 1.5rem;
-    cursor: pointer;
-   
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 /* Shopping Cart Indicator Styles */
 .shopping-cart {
-    position: relative;
-    width: 40px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #008F51;
-    color: #FFFFFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    font-weight: bold;
-   
+  position: relative;
+  padding: 0px 15px;
+  height: 30px;
+  border-radius: 16px;
+  background-color: #008f51;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .hero {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Text color on the image */
+  text-align: center;
+  margin-top: 68px; /* Adds a margin to the top, to make space for the header */
+  height: 1200px;
+
+  .hero-content {
+    padding: 20px;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white; /* Text color on the image */
-    text-align: center;
-    margin-top: 68px; /* Adds a margin to the top, to make space for the header */
-    height: 1200px;
+    flex-direction: column;
+    position: relative;
+    h1 {
+      font-family: "Frank Ruhl Libre", serif;
+      font-weight: 300;
+      font-size: 200px;
+      line-height: 200px;
+    }
+    .verticalLine {
+      display: inline-block;
+      height: 150px;
+      width: 2px;
+      background-color: white;
+      margin: 30px 0;
+    }
+    p {
+      font-family: "Arimo", sans-serif;
+      font-size: var(--headingFontSize);
+      line-height: 40px;
+      text-transform: uppercase;
+    }
   }
-
-  .hero-image {
-    width: 100%;
-    height: auto; /* Maintain aspect ratio */
-    object-fit: cover; 
-    object-position: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1; /* send the image behind the content */
-}
-  
-  .hero-content {
-   
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .hero h1 {
-    font-family: 'Frank Ruhl Libre', serif;
-    font-weight: 300; 
-    font-size: 200px; 
-    margin-bottom: 1rem;
-}
-  
-.hero p {
-    font-family: 'Arimo', sans-serif;
-    font-size: 20px;
-    margin-bottom: 1.5rem;
-   
 }
 
+.Shop-ask-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-
-.Shop-ask {
-    display: flex; /* Ensure it uses flexbox */
-    flex-wrap: wrap; /* Allow items to wrap in case they overflow */
-    justify-content: space-between; /* Distribute space evenly */
+  .column {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    gap: 20px;
-}
 
-.Shop-ask > * {
-    flex: 1 1 300px; /* Grow and shrink with a base size of 300px */
-    min-width: 300px; /* Ensure it does not go below 300px */
-    max-width: 200px; /* Optional: Set max-width if you want to limit size */
-    text-align: center;
+    h2 {
+      font-family: "Arimo", sans-serif;
+      font-size: 20px;
+      text-transform: uppercase;
+      margin-bottom: 8px; /* Space below the h2 */
+    }
+    p {
+      font-family: "Frank Ruhl Libre", serif;
+      font-weight: 300;
+      font-size: 20px;
+      padding-top: 45px; /* Top padding */
+      padding-bottom: 45px; /* Bottom padding */
+      padding-left: 0px;
+      padding-right: 0px;
+      &:first-of-type {
+        padding-top: 8px;
+      }
+    }
+    img {
+      height: 327px;
+      width: 448px;
+      border: none;
+      border-radius: 20px;
+      justify-content: space-between;
+    }
+    button {
+      width: 320px;
+      height: 45px;
+      background-color: #dc4131; /* Default color */
+      color: #ffffff; /* Text color, assuming you want white text */
+      font-size: 16px; /* Adjust as needed */
+      border-radius: 5px; /* Optional: Add rounded corners */
+      cursor: pointer; /* Change cursor to a pointer on hover */
+      transition: background-color 0.3s ease; /* Smooth transition for hov */
+      &:hover {
+        background-color: #ae2e21; /* Hover color */
+      }
+    }
+  }
 }
-  
-  .Shop-ask h2 { 
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  
-  .Shop-ask p { 
-    margin-bottom: 10px;
-  }
-  
-  .Shop-ask img { 
-    max-width: 300px;
-    height: 400px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-  }
-  
-  .Shop-ask button { 
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .Shop-ask button:hover { 
-    background-color: #367c39;
-  }
